@@ -4,19 +4,24 @@ code 200
 fv 1 sub_a click
 submit
 find "used_sub_a"
+find "referer"
 
 submit sub_a
 find "used_sub_a"
+find "referer"
 
 fv 1 sub_b click
 submit
 find "used_sub_b"
+find "referer"
 
 submit sub_b
 find "used_sub_b"
+find "referer"
 
 submit
 find "used_sub_a"
+find "referer"
 
 config readonly_controls_writeable 1
 fv 1 sub_a click
